--- a/sorteo.html
+++ b/sorteo.html
@@ -16,6 +16,9 @@
         <h1 class="numeroReciente"></h1>
         <button class="start css-button-sliding-to-left--green">Número nuevo</button>
         <button class="reiniciar css-button-sliding-to-left--red">Reiniciar</button>
+        <section class="jugados">
+            
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>    
     <script src="sorteo.js" ></script>
